samples/_failures_safe/1761719376_e9aa5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b0285d2.c: In function ‘main’:
./samples/SAFE/__tmp_4b0285d2.c:150:12: error: missing terminating " character
  150 |     printf("Graph
      |            ^~~~~~
./samples/SAFE/__tmp_4b0285d2.c:150:5: error: expected expression at end of input
  150 |     printf("Graph
      |     ^~~~~~
./samples/SAFE/__tmp_4b0285d2.c:150:5: error: expected declaration or statement at end of input
